Fixed clipping on iPhone 6 of Campfire 15' tagline

--- a/css/style.css
+++ b/css/style.css
@@ -1817,7 +1817,7 @@ h1, h2 {
     padding-top: 165px; }
 
   .jumbotron h1 {
-    font-size: 45px;
+    font-size: 40px;
     margin: 10px 0 15px; }
 
   .jumbotron h3 {
